# nexus-engine

./: .gitignore  CMakeLists.txt  README.md
engine/: CMakeLists.txt
engine/include/engine/core/: Application.hpp  Entrypoint.hpp  EventBus.hpp  Time.hpp  Window.hpp
engine/include/engine/ecs/: ComponentPool.hpp  Entity.hpp  Registry.hpp  View.hpp
engine/include/engine/events/: WindowEvents.hpp
engine/include/engine/platform/glfw/: GLFWWindow.hpp
engine/src/core/: Application.cpp  EventBus.cpp  Time.cpp  Window.cpp
engine/src/core/ecs/: Registry.hpp
engine/src/ecs/: Registry.cpp
engine/src/platform/glfw/: GLFWWindow.cpp
engine/tests/core/: TestEventBus.cpp
engine/tests/ecs/: TestRegistry.cpp
game/: CMakeLists.txt
game/src/: main.cpp
